--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -11,14 +11,14 @@
 	
 	<form name="registration" th:action="@{/reg}" th:object="${user}" method="post" class="form-signin">
 			<h2 class="form-signin-heading">Please register</h2>
-				<input type="text" id="userName" name="username" th:field="*{userName}" class="form-control" placeholder="User name"  />  
+				<input type="text" id="username" name="username" th:field="*{username}" class="form-control" placeholder="Username"  />  
 		 	    <input type="text" id="email" name="email" th:field="*{email}" class="form-control" placeholder="E-mail"  /> 
-		 	    <input type="text" id="firstName" name="firstName" th:field="*{firstName}" class="form-control" placeholder="First name"  />
-		 	    <input type="text" id="lastName" name="lastName" th:field="*{lastName}" class="form-control" placeholder="Last name"  />
+		 	    <input type="text" id="firstname" name="firstname" th:field="*{firstname}" class="form-control" placeholder="First name"  />
+		 	    <input type="text" id="lastname" name="lastname" th:field="*{lastname}" class="form-control" placeholder="Last name"  />
 			    <input type="password" id="password" name="password" th:field="*{password}"  class="form-control" placeholder="Password" />
 			    <input type="text" id="country" name="country" th:field="*{country}" class="form-control" placeholder="Country"  />
 			    <input type="text" id="city" name="city" th:field="*{city}" class="form-control" placeholder="City"  />
-			    <input type="text" id="birthDate" name="birthDate" th:field="*{birthDate}" class="form-control" placeholder="Birthdate"  />
+			    <input type="text" id="birthdate" name="birthdate" th:field="*{birthdate}" class="form-control" placeholder="Birthdate"  />
 			<button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
 		</form>
 	
