--- a/src/main/resources/templates/tipps.html
+++ b/src/main/resources/templates/tipps.html
@@ -6,8 +6,181 @@
 </head>
 <body>
 	<div th:insert="fragments/navbar :: topnav"></div>
+
+<div class="header_id">Step By Step Guidelines For Beginners</div>	
+<div class= "tippsClass">	
+<h1>Introduction</h1>
 	
-	<a>Tipps</a>
+<p>So you’ve manage to get yourself a dartboard and you want to learn how to throw a dart. You’re in the right place, this article walks you through all the aspects of how to throw a dart, both mental and physical.
+
+Most sources will teach you proper darts stance, grip, and technique, but we’ll take that a step further and brief you on the intricacies and details of each aspect including the mental aspect of proper darts throwing. Because many experts will tell you the mental aspect of throwing a dart is just as important as the physical.
+
+The mental aspect of darts is incorporated within the physical because you will naturally start to develop those skills when you practice the physical aspect of darts. Physical aspect being proper stance, grip and technique. The mental aspect include having self-confidence, good self-control, anger/anxiety management and so forth.  
+
+Another important word to understand is “proper”. Don’t be fooled into thinking there is a one size fits all way to throw a dart. How to throw a dart properly is a subjective matter and you’ll notice that a lot of different players have different throwing styles.
+
+Though there are some written in stone guidelines, the trick to throwing darts properly is finding what works for you. In this article you will be presented with a myriad of ways people stand to throw darts. Myriad of ways people grip their darts, and a myriad of techniques you can use to improve your throw.
+
+Your objective will be to experiment with the multitude of ways you can throw a dart and discover the proper technique for you.</p>
+
+	<h1>Set-Up Measurements</h1>
+	<img src="/pics/boardplace.png" width="800" height="200">
+<p>First thing first let’s make sure you’re briefed on your set-up measurements. Feel free to skip this section if you’re already confident in your darts setup knowledge.
+
+However this is a crucial step in any darts game; practice, tournament or leisure session. Having the proper setup will enable you to transition smoothly when playing in a social setting.
+
+Even though you are free to set up your dartboard however you like there are official measurements that are used in tournaments and bars and so forth.  
+
+For steel tip/bristle dartboards the dartboard is hung 5ft 8 inches or 173 cm from the center of the dartboard to the floor. The toe line is then positioned 7 feet 9 ¼ inches or 237 cm from the front of the dartboard to the back of the toe line. For added confirmation the vertical distance should be 9 feet 7 ½ inches or 298.4 cm from the center of the bullseye to the back of the oche or toe line.
+
+For soft tip darts or electronic dartboards the measurements are 5 feet 8 inches or 173 cm from the floor to the center of the bullseye, same as for steel tip dartboards. The distance of the oche is exactly 8 feet or 244 cm from the front of the dartboard to the back of the toe line. For added confirmation the diagonal distance should be 9 feet 9 ¾ inches or 299 cm from the center of the bullseye to the back of the oche.</p>
+
+<h2>Step 1: Proper Stance</h2>
+<p>Once you have your dartboard setup correctly and you have a pair of quality darts, the first step in learning how to throw a dart is knowing how to stand and position yourself at the dartboard. For some this may come as a surprise or something you may not have given any thought. If this applies to you that will be a familiar feeling throughout this article because even though the act of throwing a dart is quite simple, every aspect of that act can be broken down into further detail that makes it more complex.
+</p>
+<h2>Proper Stance Position</h2>
+<img src="/pics/stand.jpg" width="350" height="200">
+<p>
+The first thing before even having the right stance is positioning yourself correctly at the toe line. This is something a lot of beginners overlook, myself included but once you think about it it makes a lot of sense.
+
+I never thought about where behind the toe line I stood, as long as I was behind the toe line I thought everything was ok, yes and no. The trick here is to position yourself in a straight line with the dartboard. You do this by stretching your dominant arm out in front of you and seeing if it aligns with the center of the dartboard or whichever mark you are trying to hit.
+
+
+The idea here is if you position yourself directly in front of the number you’re trying to hit then that’s half the battle. Your next step will only be to throw the dart in a straight line to hit your mark. As oppose to moving your hand around trying to aim at the dartboard which could mess up your follow up throws.
+
+To note in most dart games you get three throws per turn, so consistency is a by part of how to throw a dart.</p>
+
+<h2>3 Major Ways To Stand</h2>
+<p>So once you manage to position yourself straight in front of the number you want to hit, you’ll notice you’re facing the dartboard at a certain angle. There are three major dart stance that have been popularly recognized.
+</p>
+<h2>Tilted Stance</h2>
+<img src="/pics/darts-stance3.png">
+<p>
+The most popular being a tilted stance. This usually includes someone leaning forward with their dominant leg while their other leg trails behind in a slightly tilted to the left position. This is the stance most people use. It is recommended that you distribute your body weight at a 60/40 ratio when using this stance. 60% on your forward leg and 40% on your back leg it’ll provide for better balance when throwing.
+</p>
+<h2>Side Stance</h2>
+<img src="/pics/darts-stance1.png">
+<p>
+Another stance that is popularly recognized is the side stance. This is quite simple to describe. This is when a player turns and completely faces the dartboard with the side of their body, no worries their head is turned to face the board.
+</p>
+<h2>Forward Stance</h2>
+<img src="/pics/darts-stance2.png">
+<p>
+The last stance is a forward stance where a player is facing the dartboard with the front of their body. This stance is the least used of the three because it makes it harder to balance. Throwing of a dart requires some movement of your arms which has the tendency to cause people to loose balance using this stance.
+</p>
+<h2>Which one do you choose?</h2>
+<p>Those different stances are listed not to say that one is particularly better than the other. They all come with pros and cons. The idea is to expand your repertoire so that if you’re unsatisfied with whichever stance you’re using currently you can adjust it, try a new stance and see if it improves your game.
+</p>
+<h1>The Different Types of Grips</h1>
+<p>Proper stance is just the first step of how to throw a dart. The next step is how you’re actually going to hold the dart in your hand, or your “grip”. Once again this may be something that you may not have given any thought, At least I didn’t at first, but it’s very important. The basic thing to remember regardless of how you decide to hold your dart is that your grip shouldn’t be too tight.
+
+This is a mistake a lot of new players make, including throwing the dart with too much force. How you hold a dart should be like how you hold a potato chip. You don’t want to crush it. This will set you up for a better throw later on.
+
+For now, there’s actually 4 different ways you can grip a dart. It’s also quite simple to keep track of different grips once you know what they are. The different grips are identified by the amount of fingers you use when incorporating them. The types of darts grips range from the 2 finger grip to the 5 finger grip.
+
+The general understanding is that the more finger you have placed on the dart the more control it’ll give you on your aim. On the other hand it’ll also make it harder for you to release your dart if you have too many fingers on it.
+</p>
+
+<h3>2 finger grip: Thumb and index finger.</h3>
+<img src="/pics/1dartgrip.jpg" width="350" height="200">
+<h3>3 finger grip: Thumb, index, and middle finger.</h3>
+<img src="/pics/2fingerdartgrip2.jpg" width="350" height="200">
+<h3>4 finger grip: Thumb, index, middle and ring finger.</h3>
+<img src="/pics/4dartgrip.jpg" width="350" height="200">
+<h3>5 finger grip: thumb, index, middle, ring, and pinkie.</h3>
+<img src="/pics/5fingerdartgrip.jpeg" width="350" height="200">
+<p>Each grip comes with it’s pros and cons. As was stated earlier the more fingers you have on the dart the better control you have over where you aim it. Likewise the less fingers you have on the dart the easier it’ll be for you to release it when you throw. And as we’ll get into in the next section time of release is one of the most crucial factors in darts throwing technique.
+
+The idea with dart grip like most other things in darts is choosing the one that works best for you. Some people even recommend that you just use the grip that comes most naturally to you when you first pick up a dart. Grip is a subjective matter that depends on the individual. All professionals don’t use the same grip.
+
+You have some people who shoot great with a pencil or 3 finger grip and you have others who prefer more fingers. It’s a matter of tweaking and figuring out what you prefer. Personally I use a 3 finger grip. It just feels more comfortable to me.
+</p>
+<h1>Influence of Dart Weight Distribution</h1>
+<img src="/pics/dartsweightdistribution.png">
+<p>A factor that influences where to grip your dart is the actual weight distribution of your dart. If you are a beginner you may not be aware but darts have something called weight distribution which is pretty self-explanatory. Basically there are three types of dart weight distribution, front weighted darts, back weighted darts, and evenly weight distributed darts. 
+
+If you’re a beginner odds are your weights are front weighted darts. You can tell the weight distribution from the dart barrel composition. Also if you aren’t aware, the dart barrel is the part of the dart between the point and the shaft where you hold or grip the dart.
+
+If your darts are front weighted you’ll notice that the barrel is also front weighted, it’ll tend to be bigger in the front. Back weighted darts are the opposite with more weight in the back and evenly distributed darts have a uniform weight distribution. Knowing the weight distribution of your dart is important because certain weight distribution requires you hold the dart a certain way.
+
+For front weighted darts you have to hold the barrel in the front. Back weighted darts dictate you hold the dart from the back and even weighted darts you can hold in the middle. However this is minor detail because beginners are encouraged to use only front weighted darts.
+
+Back and even weighted darts come with modifications that alter your throw. In conclusion proper grip requires the proper dart and in most cases you should be fine but if you find yourself with the wrong dart weight distribution, alter your grip towards the dart.
+
+</p>
+<h1>Step 3: How to throw a dart Technique</h1>
+<p>
+So once you have the stance and grip down you’ll finally be ready to throw the dart. This is arguably the most important part of the darts throwing process. And there are a lot of tips, tricks and actual written in stone definition on how to do it. So if you were looking for an actual step by step guide on how to throw a dart you’ve found it.
+</p>
+
+<h2>First Some Theory</h2>
+<p>Well darts is just full of surprises, another fact you may not know is that all darts travel in a parabolic curve. If you are unfamiliar with that section of mathematics. A parabolic curve is a up and down movement that can be calculated with the following formula (x – h)2 = 4p (y – k). For our purposes you will not need to know that formula. You just need to know that a dart travels in an up and down motion and not a straight line. This will help you better understand proper dart throwing technique.
+</p>
+
+<h1>Shoulder Position</h1>
+<img src="/pics/darts-stance-position.gif">
+<p>This is one of the few things in darts that is written in stone that everyone have to do regardless of the type of grip, stance or level of darts expertise. That is to keep your shoulders still. Proper dart technique requires that you extend your hand straight in front of you, with your forearm, the area between your elbow and wrist raised straight up.
+
+This is the basic stance all darts players must assume before throwing a dart. From this stance there are tips and tricks to help improve your throw but there are also some things that can’t be taught. You kind of have to figure them out on your own. One of those things is release position/time.
+
+Darts research have been done to pinpoint the most important part of throwing a dart that separate amateurs from experts. What they discovered is that consistent time of release was that factor. Experts tend to release their darts more consistently than amateurs. They also release the dart at the same hand position over and over.
+
+That is the secret to darts mastery right there. Being able to produce your best throw over and over. This should be your goal to the deterrent of all else and that is an example of something you’ll have to figure out from practice.
+</p>
+
+<h1>Dart Should Be pointing Upwards</h1>
+<p>Another pro tip to help guide your dart and keep it on a parabolic curve is to have your dart point facing slighting up before you throw. This will help better put it in a parabolic motion as oppose to shooting from a neutral or downwards motion. Having the dart pointing downwards is an absolute no no.
+</p>
+<h1>Aim Your Dart</h1>
+<img src="/pics/images.jpg">
+<p>
+What I can tell you is that, it is recommended that you aim your dart before you throw. You can do this the way you feel most comfortable with. The recommendation is that you align the dart with your eye that way you have a focus for your aim. Other people use the dart tip or their pinkie to aim, it’s up to you.
+</p>
+<h1>Flick wrist for momentum</h1>
+<p>Another tip is that flicking your wrist, as if you were snapping a whip is a good way to add more momentum to your throw.
+</p>
+
+<h1>Follow Through</h1>
+<img src="/pics/follow.jpg">
+<p>
+Follow through is the term for the continuation of the throwing hand motion even after you release the dart. This is something crucial that beginners may not realize but it can really influence your throw. Following through helps with better consistency because it makes the whole throwing motion smoother.
+
+Since you are aware of the full range of your throw you’ll be better able to duplicate your time of release. As oppose to trying to stop at the same place over and over not knowing your full range of motion. It’s a simple motion that can create great positive change in your game. If you aren’t already finishing your hand motion after releasing your dart, try it and see how it feels.
+
+And for added security your end follow through position should be with your hand facing towards the dartboard as oppose to facing downwards.
+</p>
+<h1>Practice</h1>
+<p>There is no shortcut to darts mastery. Practice is essential. The professionals you see on T.V. are even the guys that practice the most. Well it is their day job so I suppose they have more time to dedicate but the point is just being good at darts isn’t enough to stop practicing.
+
+Darts is one of those skills that you must constantly practice to acquire and one of those skills you must constantly practice to keep. Tweaking your technique now with any of the skills we discussed in this article will help you throw a dart better but the only way you’ll really solidify that skill is through practice.
+
+There’s no time where you can say you don’t need practice. Darts practice is continuous. It is even recommended more regularly for less periods of time then in bulk once or twice a week. That means you should practice for half an hour every day as oppose to 2 hours on the weekends. You’re retain more that way.
+
+Though you can also practice for long periods of time regularly. Overall the more practice the better.
+</p>
+<h1>Step 4: Darts Mental Training</h1>
+<p>
+The mental aspect is a less touched on topic when teaching how to throw a dart but it’s something that will aid you in your darts training and make the whole process easier. There are darts mental programs out there that utilize sports physiology to hypnotize you to play better. That is not what we are going to discuss here.
+
+There are many ways you can improve your darts inner game that don’t require any therapy. Horning your inner game is a matter of self-control. The keyword is concentration. I like to use professional darts players as an example. If you’ll notice when you watch professionals play they always have a very composed demeanor.
+
+They don’t let themselves become overcome with emotion until after a leg. This is deliberate. Emotions like fear, and anger are all deterrents to your concentration. Even lack of confidence is a deterrent to your concentration. This is something you’ll struggle with as a beginner. You don’t even know if darts is for you.
+
+You may have been trying to get better for some time and you don’t see any improvements. You want to quit. You don’t think darts is for you. These are all deterrents to your concentration and examples of bad inner game. Good inner game means having the confidence and belief that you can achieve your darts goal. Good inner game means being able to manage your anger and anxiety during gameplay.
+
+Anxiety is a big one. A lot of people have social anxiety like having difficulty speaking in front of a crowd or just doing anything in front of an audience period. This same thing applies to darts. A lot of people will do just fine when they are practicing by themselves but once the stakes are higher. Say they’ll playing at a bar or at a tournament their nerves kick in and their concentration goes out the window.
+
+Having good inner game is knowing how to knock down those negative emotions like anger and anxiety and focus on hitting your mark. The key to being a good darts player is keeping yourself clear of negative emotions while concentrating on creating your best form over and over.
+</p>
+
+<h1>In Conclusion</h1>
+<p>Learning how to throw a dart or being good at darts first requires you know the proper stance, grip and darts technique. The way to bring all of those things together is through practice. You can read lengthily about how to throw a dart but unless you get out there and put it into action it won’t be much help. And also don’t forget, the mental aspect or inner game is a huge part of darts. Having good inner game maximizes your outer performance. Bad inner game will only deter from your performance.
+
+Go even more in depth and learn how to throw darts with precision.</p>
+
+<p style="font-family:courier;">Informations from DartsReference.com</p>
+</div>
+
 	
 	<div th:insert="fragments/footer :: foot"></div>
 </body>
