--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 	<div th:insert="fragments/navbar :: topnav"></div>
-		<div class="container">
+		<div class="tippsClass">
 		<article>
         <header>
+            <h2 th:text="${news.title}">Ez itt a cím</h2> 
         	<img th:src="${news.picurl}"></img>
         	<br>
-            <h2 th:text="${news.title}">Ez itt a cím</h2> 
             <p th:text="${#dates.format(news.posted, 'yyyy.MM.dd HH:mm')}">Posted on September 31, 2015 at 10:00 PM</p>
         </header>
         <section th:utext="${news.content}">
