--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,3 +1,8 @@
 <div  id="footer" th:fragment="foot">
-				<p>Hali</p>
+	<footer>
+			<p> <img th:src="@{/pics/icon.png}" width="25" height="25"></img>
+				Powered by BDarts 2020
+				<img th:src="@{/pics/icon.png}" width="25" height="25"></img>
+		    </p> 
+	</footer>		
 </div>
