--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,7 @@
 <body>
 	<div th:insert="fragments/navbar :: topnav"></div>
 	
-	<h3>Main Page</h3>
-	
+	<div class="header_id">Thank you for join us</div>
 
 
 	
